Fixed Hero search bar on dashboard view.

--- a/src/client/index.pug
+++ b/src/client/index.pug
@@ -16,6 +16,7 @@ html
         'lib/zone.js',
         'lib/Reflect.js',
         'lib/system.src.js',
+        'lib/underscore-min.js',
         'app/main.js'
       ]
     each script in scripts
