--- a/src/client/app/dashboard/dashboard.component.pug
+++ b/src/client/app/dashboard/dashboard.component.pug
@@ -3,3 +3,4 @@ h3 Top Heroes
   .col-1-4(*ngFor='let hero of heroes', (click)='gotoDetail(hero)')
     .module.hero
       h4 {{hero.name}}
+hero-search
