--- a/src/client/index.pug
+++ b/src/client/index.pug
@@ -23,7 +23,7 @@ html
       script(src=script)
 
     // Configure SystemJS
-    script(src='systemjs.config.js')
+    script(src='lib/systemjs.config.js')
     script.
       System.import('main').catch(function(err){ console.error(err); });
 
