--- a/src/client/app/app.component.pug
+++ b/src/client/app/app.component.pug
@@ -3,3 +3,4 @@ nav
   a(routerLink='/dashboard', routerLinkActive='active') Dashboard
   a(routerLink='/heroes', routerLinkActive='active') Heroes
 router-outlet
+modal-dialogs(#dialogs=true)
